feat: catalog page

--- a/src/components/_popular-products.html
+++ b/src/components/_popular-products.html
@@ -94,11 +94,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена&nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -167,11 +167,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена&nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -240,11 +240,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена&nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -313,11 +313,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена&nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -386,11 +386,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена&nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
