--- a/src/components/_recommendations.html
+++ b/src/components/_recommendations.html
@@ -100,11 +100,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена &nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -173,11 +173,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена &nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -246,11 +246,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена &nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -319,11 +319,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена &nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
@@ -392,11 +392,11 @@
 
                             <div class="recommendations__card-group">
                                 <button class="recommendations__card-group-button --primary">
-                                    <span>Оптовая цена</span> 45.90₽<span>/от 100 тыс.</span>
+                                    <span>Оптовая цена &nbsp;</span> 45.90₽<span>/от 100 тыс.</span>
                                 </button>
 
                                 <button class="recommendations__card-group-button --secondary">
-                                    <span>Розничная цена</span> 95.90₽/шт
+                                    <span>Розничная цена &nbsp;</span> 95.90₽/шт
                                 </button>
                             </div>
 
