--- a/src/ui/styles/_recommendations-card.scss
+++ b/src/ui/styles/_recommendations-card.scss
@@ -1,153 +1,300 @@
-.recommendations{
-  &__card {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
-    background: $grey-bg;
-    border-radius: 3rem;
-    overflow: hidden;
-    height: 100%;
-
-    &-image {
-      border-radius: 2rem;
-      @include sizes(100%, 30.8rem);
-      margin-bottom: 1.6rem;
-
-      img {
-        border-radius: inherit;
-        height: 100%;
-        object-fit: cover;
-      }
-    }
-
-    &-title {
-      margin-bottom: 0.8rem;
-      @include clamp-text(2);
-    }
-
-    &-articul {
-      display: block;
-      margin-bottom: 2rem;
-    }
-
-    &-group {
-      display: flex;
-      align-items: center;
-      width: 100%;
-      justify-content: space-between;
-      margin-bottom: 1.6rem;
-      background-color: $white;
-      border-radius: 10rem;
-      margin-top: auto;
-
-      &-button {
-        padding: 1.25rem 3.2rem;
-        border-radius: 10rem;
-        color: $green;
-        font-size: 1.6rem;
-        line-height: 120%;
-        text-align: center;
+.recommendations {
+    &__card {
         display: flex;
-        align-items: center;
-        height: 4.4rem;
-        white-space: nowrap;
-        gap: 0.4rem;
-        justify-content: center;
+        flex-direction: column;
+        padding: 2rem;
+        background: $grey-bg;
+        border-radius: 3rem;
+        overflow: hidden;
+        height: 100%;
+        position: relative;
 
-        span {
-          display: none;
-        }
+        &.--list {
+            flex-direction: row;
+            gap: 2.1rem;
 
-        &.--primary {
-          background-color: $green;
-          color: $white;
-          max-width: 60%;
-          width: 100%;
-
-          span {
-            &:last-child {
-              display: block;
-            }
-          }
-
-          @include hover {
-            &:not(.--selected-value) {
-              max-width: 100%;
-              max-height: 100%;
-              width: 100%;
-
-              span {
-                &:first-child {
-                  display: block;
+            .recommendations__card {
+                &-title {
+                    margin-bottom: 1.2rem;
                 }
-              }
 
-              ~ button {
-                display: none;
-              }
+                &-image {
+                    max-width: 23rem;
+                    width: 100%;
+                    margin-bottom: 0;
+                    display: flex;
+                    height: auto;
+                }
+
+                &-middle {
+                    display: flex;
+                    flex-direction: column;
+                    max-width: 53.1rem;
+                    width: 100%;
+                    gap: 8rem;
+                }
+
+                &-info {
+                    display: flex;
+                    margin-top: auto;
+                }
+
+                &-groups {
+                    margin-left: auto;
+                    max-width: 27.9rem;
+                    width: 100%;
+                    margin-right: 10.8rem;
+                    display: flex;
+                    flex-direction: column;
+                }
+
+                &-group {
+                    flex-direction: column;
+                    gap: 1.2rem;
+                    align-items: flex-start;
+                    background-color: transparent;
+                    margin: 0;
+
+                    &-button {
+                        max-width: 100%;
+                        width: fit-content;
+                        justify-content: flex-start;
+                        height: auto;
+
+                        &:first-child {
+                            padding: 1.2rem 1.6rem;
+                        }
+
+                        &:last-child {
+                            margin-left: 1.2rem;
+                        }
+                    }
+                }
+
+                &-button {
+                    margin-top: auto;
+                    max-width: 24rem;
+                    width: 100%;
+                }
+
+                &-favorite-button {
+                    display: block;
+                }
             }
-          }
-
-          &.--selected {
-            max-width: 100%;
-            max-height: 100%;
-            width: 100%;
-
-            span {
-              &:first-child {
-                display: block;
-              }
-            }
-
-            ~ button {
-              display: none;
-            }
-          }
-
-          &.--hovered {
-            max-width: max-content;
-            gap: 0;
-            padding: 1.25rem 2rem;
-
-            span {
-              display: none;
-            }
-          }
-
-          &.--selected-value {
-            max-width: max-content;
-            gap: 0;
-            padding: 1.25rem 2rem;
-
-            span {
-              display: none;
-            }
-          }
         }
 
-        &.--secondary {
-          padding: 1.25rem 3.2rem;
-          max-width: 40%;
-          width: 100%;
-
-          span {
+        &-info {
             display: none;
-          }
+            flex-direction: column;
+            gap: 1.6rem;
 
-          &.--active,
-          &.--selected {
-            max-width: 100%;
-            max-height: 100%;
-            width: 100%;
+            &-item {
+                display: flex;
+                align-items: center;
+                gap: 0.8rem;
 
-            span {
-              &:first-child {
-                display: block;
-              }
+                &-icon {
+                    @include sizes(2rem, 2rem);
+                }
+
+                &-text {
+                    color: $grey-text;
+
+                    span {
+                        color: $fontColor;
+                    }
+                }
             }
-          }
         }
-      }
+
+        &-image {
+            border-radius: 2rem;
+            @include sizes(100%, 30.8rem);
+            margin-bottom: 1.6rem;
+
+            img {
+                border-radius: inherit;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        &-title {
+            margin-bottom: 0.8rem;
+            @include clamp-text(2);
+        }
+
+        &-articul {
+            display: block;
+            margin-bottom: 2rem;
+        }
+
+        &-group {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            justify-content: space-between;
+            margin-bottom: 1.6rem;
+            background-color: $white;
+            border-radius: 10rem;
+            margin-top: auto;
+
+            &-button {
+                border-radius: 10rem;
+                color: $green;
+                font-size: 1.6rem;
+                line-height: 120%;
+                text-align: center;
+                display: flex;
+                align-items: center;
+                height: 4.4rem;
+                white-space: nowrap;
+                justify-content: center;
+
+                span {
+                    display: none;
+                }
+
+                &.--primary {
+                    background-color: $green;
+                    color: $white;
+                    max-width: 60%;
+                    width: 100%;
+
+                    span {
+                        &:last-child {
+                            display: block;
+                        }
+                    }
+
+                    @include hover {
+                        &:not(.--selected-value) {
+                            max-width: 100%;
+                            max-height: 100%;
+                            width: 100%;
+
+                            span {
+                                &:first-child {
+                                    display: block;
+                                }
+                            }
+
+                            &:not(.--list &) {
+                                ~ button {
+                                    display: none;
+                                }
+                            }
+                        }
+                    }
+
+                    &.--selected {
+                        max-width: 100%;
+                        max-height: 100%;
+                        width: 100%;
+
+                        span {
+                            &:first-child {
+                                display: block;
+                            }
+                        }
+
+                        &:not(.--list &) {
+                            ~ button {
+                                display: none;
+                            }
+                        }
+                    }
+
+                   &:not(.--list &) {
+                       &.--hovered {
+                           max-width: max-content;
+                           gap: 0;
+                           padding: 1.25rem 2rem;
+
+                           span {
+                               display: none;
+                           }
+                       }
+                   }
+
+                    &.--selected-value {
+                       &:not(.--list &) {
+                           max-width: max-content;
+                           gap: 0;
+                           padding: 1.25rem 2rem;
+
+                           span {
+                               display: none;
+                           }
+                       }
+                    }
+                }
+
+                &.--secondary {
+                    max-width: 40%;
+                    width: 100%;
+
+                    span {
+                        display: none;
+                    }
+
+                    &.--active,
+                    &.--selected {
+                        max-width: 100%;
+                        max-height: 100%;
+                        width: 100%;
+
+                        span {
+                            &:first-child {
+                                display: block;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        &-favorite-button {
+            display: none;
+            position: absolute;
+            right: 2rem;
+            top: 2rem;
+            @include sizes(2.4rem, 2.4rem);
+            z-index: 3;
+
+            svg {
+                width: 100%;
+                height: 100%;
+                transition: 0.3s all ease;
+
+                path {
+                    transition: 0.3s all ease;
+
+                    &:first-child{
+                        fill: $grey-text;
+                        stroke: $grey-text;
+                    }
+
+                    &:last-child{
+                        fill: transparent;
+                    }
+                }
+            }
+
+            &.--active, &:hover {
+                svg {
+                    path {
+                        &:first-child{
+                            fill: $pink;
+                            stroke: $pink;
+                        }
+
+                        &:last-child{
+                            fill: $pink;
+                        }
+                    }
+                }
+            }
+        }
     }
-  }
 }
