--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -34,6 +34,12 @@
 // variants-card
 @import './variants-card';
 
+// showmore-button
+@import './showmore-button';
+
+// nouislider
+@import './nouislider';
+
 // ---------------------------- для демонстрации ---------------------------
 
 .form {
@@ -296,7 +302,7 @@
 
             path,
             rect {
-                transition: 0.2s stroke ease;
+                transition: 0.2s all ease;
             }
         }
 
@@ -316,19 +322,19 @@
 
         &:active {
             border-color: $green;
-            background-color: $white;
+            background-color: $white !important;
 
             span {
-                color: #1d1d1b;
+                color: #1d1d1b !important;
             }
 
             svg {
                 path {
-                    stroke: $white;
+                    stroke: $white !important;
                 }
 
                 rect {
-                    fill: $green;
+                    fill: $green !important;
                 }
             }
         }
