feat: cooperation page

--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -11,3 +11,8 @@ figure {
 @import '../sections/catalog-categories';
 @import '../sections/catalog';
 @import '../sections/seo';
+@import '../sections/cooperation';
+@import '../sections/pricing';
+@import '../sections/benefits';
+@import '../sections/feature';
+@import '../sections/figuration';
