--- a/src/scss/sections/_banner.scss
+++ b/src/scss/sections/_banner.scss
@@ -74,6 +74,7 @@
         img {
             border-radius: inherit;
             object-fit: contain;
+            height: 100%;
         }
     }
 }
