feat: favorites page

--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -16,3 +16,4 @@ figure {
 @import '../sections/benefits';
 @import '../sections/feature';
 @import '../sections/figuration';
+@import '../sections/favorites';
