feat: promotions page

--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -17,3 +17,4 @@ figure {
 @import '../sections/feature';
 @import '../sections/figuration';
 @import '../sections/favorites';
+@import '../sections/promotions';
