feat: basket page

--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -18,3 +18,4 @@ figure {
 @import '../sections/figuration';
 @import '../sections/favorites';
 @import '../sections/promotions';
+@import '../sections/basket';
