--- a/src/scss/sections/_catalog.scss
+++ b/src/scss/sections/_catalog.scss
@@ -220,13 +220,13 @@
                 gap: 5.3rem;
                 position: relative;
 
-                &::after{
-                    @include pseudo{
+                &::after {
+                    @include pseudo {
                         left: 50%;
                         top: 50%;
                         transform: translate(-50%, -50%);
                         width: 1.3rem;
-                        height: .1rem;
+                        height: 0.1rem;
                         background-color: $grey-text;
                     }
                 }
@@ -238,11 +238,12 @@
                     input {
                         width: 100%;
                         padding: 1.6rem;
-                        border: .1rem solid rgba(137, 132, 133, 0.5);
+                        border: 0.1rem solid rgba(137, 132, 133, 0.5);
                         border-radius: 3rem;
                     }
 
-                    input, input::placeholder{
+                    input,
+                    input::placeholder {
                         font-size: 1.6rem;
                         line-height: 120%;
                         color: #898485;
@@ -399,8 +400,15 @@
             &-button {
                 @include sizes(2.4rem, 2.4rem);
 
-                &.--active,
-                &:hover {
+                &.--active {
+                    svg {
+                        path {
+                            fill: $fontColor;
+                        }
+                    }
+                }
+
+                @include hover {
                     svg {
                         path {
                             fill: $fontColor;
@@ -434,7 +442,6 @@
                 display: none;
             }
         }
-
     }
 
     &__promotion-card {
