feat: contacts page

--- a/src/components/_basket.html
+++ b/src/components/_basket.html
@@ -21,7 +21,7 @@
 
                 <ul class="basket__actions-list">
                     <li class="basket__actions-item">
-                        <a download="#">
+                        <a download="#" class="link">
                             <figure class="basket__actions-item-icon">
                                 <img src="../assets/images/icons/link.svg" alt="" />
                             </figure>
@@ -30,7 +30,7 @@
                         </a>
                     </li>
                     <li class="basket__actions-item">
-                        <a download="#">
+                        <a download="#" class="link">
                             <figure class="basket__actions-item-icon">
                                 <img src="../assets/images/icons/printer.svg" alt="" />
                             </figure>
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li class="basket__actions-item">
-                        <a href="">
+                        <a href="" class="link">
                             <figure class="basket__actions-item-icon">
                                 <img src="../assets/images/icons/share.svg" alt="" />
                             </figure>
