--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -19,3 +19,5 @@ figure {
 @import '../sections/favorites';
 @import '../sections/promotions';
 @import '../sections/basket';
+@import '../sections/contacts';
+@import '../sections/connection';
