feat header + registration

--- a/src/components/_map.html
+++ b/src/components/_map.html
@@ -104,9 +104,16 @@
                                     </svg>
                                 </button>
                                 <ul class="map-card__list">
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>
+                                        <span>Оптовый отдел продаж:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
+                                    </li>
+                                    <li>
+                                        <span>Оптово-розничный магазин:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -213,9 +220,16 @@
                                     </svg>
                                 </button>
                                 <ul class="map-card__list">
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                    <li>
+                                        <span>Оптовый отдел продаж:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
+                                    </li>
+                                    <li>
+                                        <span>Оптово-розничный магазин:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -318,10 +332,17 @@
                                         </g>
                                     </svg>
                                 </button>
-                                <ul class="map-card__list">
-                                    <li></li>
-                                    <li></li>
-                                    <li></li>
+                                <ul class="map-card__list last">
+                                    <li>
+                                        <span>Оптовый отдел продаж:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
+                                    </li>
+                                    <li>
+                                        <span>Оптово-розничный магазин:</span>
+                                        <a href="#">8 800 600 28 20</a>
+                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
