--- a/src/scss/sections/_map.scss
+++ b/src/scss/sections/_map.scss
@@ -126,6 +126,8 @@
         height: 5.6rem;
         width: 100%;
         background-color: $white;
+        position: relative;
+        z-index: 2;
 
         span {
             color: $black-secondary;
@@ -136,6 +138,7 @@
             width: 2.8rem;
             height: 2.8rem;
         }
+
         .phone {
             margin-right: 1rem;
         }
@@ -143,10 +146,48 @@
     // .map-card__list
     &__list {
         position: absolute;
-        bottom: 0;
+        top: 50%;
         left: 0;
         z-index: 1;
         display: none;
+        &.last {
+            top: unset;
+            bottom: 50%;
+
+            &.show {
+                padding: 2rem 2rem 4.8rem 2rem;
+            }
+        }
+        &.show {
+            display: flex;
+            flex-direction: column;
+            gap: 4rem;
+            background-color: $white;
+            border-radius: 2.4rem;
+
+            border: 1px solid $green;
+            padding: 4.8rem 2rem 2rem 2rem;
+            width: 100%;
+
+            li {
+                display: flex;
+                flex-direction: column;
+                gap: 1.2rem;
+            }
+
+            span {
+                font-weight: 400;
+                font-size: 1.6rem;
+                line-height: 120%;
+                color: $grey-text;
+            }
+
+            a {
+                font-weight: 400;
+                font-size: 1.8rem;
+                color: $black-secondary;
+            }
+        }
     }
 }
 
