--- a/src/scss/sections/_variants.scss
+++ b/src/scss/sections/_variants.scss
@@ -1,11 +1,14 @@
 .variants {
     &__title {
         margin-bottom: 4.8rem;
+
+        @include small-tablet{
+            margin-bottom: 8rem;
+        }
     }
 
     &__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 4rem;
     }
 }
