--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -58,6 +58,9 @@
 // badge
 @import 'badge';
 
+// swiper-pagination
+@import 'swiper-pagination';
+
 // ---------------------------- для демонстрации ---------------------------
 
 .form {
