--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -2,6 +2,19 @@
     &__cards {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 4rem;
+    }
+
+    .link {
+        span {
+            @include small-tablet{
+                display: none;
+            }
+        }
+
+        svg {
+            @include small-tablet{
+                @include sizes(4.8rem, 4.8rem)
+            }
+        }
     }
 }
