--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -133,6 +133,10 @@
     justify-content: space-between;
     margin-bottom: 4.8rem;
 
+    @include small-tablet{
+        margin-bottom: 8rem;
+    }
+
     .link {
         gap: 1.6rem;
     }
